// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ContestPage 1`] = `
.c28 {
  font-size: 1em;
  font-weight: 500;
  line-height: 1.2;
  margin: 0;
}

.c3 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-size: 0.75em;
}

.c22 {
  font-size: 1em;
  font-weight: 400;
  line-height: 1.2;
  margin: 0;
  font-size: 0.75em;
}

.c8 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-size: 1rem;
  margin-bottom: 0.5em;
}

.c6 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-weight: 500;
  line-height: 1.08;
  margin-bottom: 0.3em;
  font-size: 1.5rem;
  font-weight: 600;
}

.c6:not(:first-child) {
  margin-top: 1.25em;
}

.c6 + h1,
.c6 + h2,
.c6 + h3,
.c6 + h4,
.c6 + h5,
.c6 + h6 {
  margin-top: 0 !important;
}

.c2 {
  max-width: 66ch;
  line-height: 1.2;
}

.c2 p {
  font-size: 1em;
}

.c2 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c2 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c2 h3 {
  font-size: 1.17em;
}

.c2 h4 {
  font-size: 1em;
}

.c2 h5 {
  font-size: 0.9em;
}

.c2 h3,
.c2 h4,
.c2 h5,
.c2 p,
.c2 ol,
.c2 ul,
.c2 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c2 h1 + h2 {
  margin-top: -0.75em;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h1 + ol,
.c2 h2 + ol,
.c2 h1 + ul,
.c2 h2 + ul {
  margin-top: -0.75em;
}

.c2 h3 + p,
.c2 h4 + p,
.c2 h5 + p,
.c2 h3 + ol,
.c2 h4 + ol,
.c2 h5 + ol,
.c2 h3 + ul,
.c2 h4 + ul,
.c2 h5 + ul {
  margin-top: -1em;
}

.c2 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c2 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c2 dl {
  margin: 1em 0;
}

.c2 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c19 {
  fill: currentColor;
  height: 1em;
  width: 1em;
}

.c13 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-sizing: border-box;
  background: #d3d3d3;
  padding: 0.75em 1em;
  text-align: center;
  line-height: 1.25;
  color: #000000;
  touch-action: manipulation;
}

.c13:hover,
.c13:active {
  outline: none;
}

.c24 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-sizing: border-box;
  background: #d3d3d3;
  padding: 1em 1.75em;
  text-align: center;
  line-height: 1.25;
  color: #000000;
  font-size: 1.25em;
  touch-action: manipulation;
}

.c24:hover,
.c24:active {
  outline: none;
}

.c15 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0.05rem solid currentColor;
  border-radius: 0.15em;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.75em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.75em;
}

.c18 > * {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c14 {
  border: 0.05rem solid currentColor;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  min-width: -webkit-min-content;
  min-width: -moz-min-content;
  min-width: min-content;
  padding: 0.5rem 0.5rem;
  text-align: left;
  width: 100%;
}

.c14:active {
  border: 0.05rem solid #47a74b;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  gap: 0.5rem;
}

.c17 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c20 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1;
}

.c21 {
  line-height: inherit;
  margin-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c5 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 30px 0.5rem;
}

.c7 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: auto;
}

.c9::before,
.c9::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c9::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c9::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c11 {
  margin: 0 auto;
  width: 100%;
  padding: 0.25rem 20px 0;
}

.c12 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

.c25 {
  white-space: nowrap;
}

.c25::after {
  display: inline-block;
  margin-left: 0.5rem;
  background: url('/images/arrow-right-open-black.svg') no-repeat;
  width: 1.375rem;
  height: 1.375rem;
  vertical-align: text-bottom;
  content: '';
}

.c26 {
  white-space: nowrap;
}

.c26::before {
  display: inline-block;
  margin-right: 0.5rem;
  background: url('/images/arrow-left-open-black.svg') no-repeat;
  width: 1.375rem;
  height: 1.375rem;
  vertical-align: text-bottom;
  content: '';
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #333333;
  padding: 20px;
  color: #ffffff;
  gap: 20px;
}

.c23 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c23 > *:first-child {
  -webkit-flex: 2 1;
  -ms-flex: 2 1;
  flex: 2 1;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c23 button {
  padding-right: 10px;
  padding-left: 10px;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  gap: 0.5rem;
  text-align: left;
}

.c1 {
  padding: 30px 30px 0;
}

@media print {

}

@media print {

}

@media print {

}

@media print {
  .c0 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          This is the
           
          <strong>
            1st
             contest
          </strong>
           of
           
          21 contests
           on your ballot.
        </span>
      </div>
    </div>
    <main
      class="c4"
    >
      <div
        class="c5"
        id="contest-header"
      >
        <div
          class="c2"
          id="audiofocus"
        >
          <h1
            aria-label="District 1 President and Vice-President."
            class="c6"
          >
            <div
              class="c7"
            >
              District 1
            </div>
            President and Vice-President
          </h1>
          <p
            class="c8"
          >
            Vote for 
            1
            .
             
            <span
              class="screen-reader-only"
            >
              To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
            </span>
          </p>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <div
              aria-multiselectable="true"
              class="c12"
              role="listbox"
            >
              <button
                aria-label=" Joseph Barchi and Joseph Hallaren, Federalist."
                aria-selected="false"
                class="c13 c14"
                role="option"
                type="button"
              >
                <span
                  class="c15"
                >
                  <span
                    class="c16"
                  >
                    <span
                      class="c17"
                    >
                      <span
                        class="c18"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c20"
                    >
                      <p
                        class="c8 c21"
                      >
                        Joseph Barchi and Joseph Hallaren
                      </p>
                      <span
                        class="c22"
                      >
                        Federalist
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Adam Cramer and Greg Vuocolo, People's."
                aria-selected="false"
                class="c13 c14"
                role="option"
                type="button"
              >
                <span
                  class="c15"
                >
                  <span
                    class="c16"
                  >
                    <span
                      class="c17"
                    >
                      <span
                        class="c18"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c20"
                    >
                      <p
                        class="c8 c21"
                      >
                        Adam Cramer and Greg Vuocolo
                      </p>
                      <span
                        class="c22"
                      >
                        People's
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Daniel Court and Amy Blumhardt, Liberty."
                aria-selected="false"
                class="c13 c14"
                role="option"
                type="button"
              >
                <span
                  class="c15"
                >
                  <span
                    class="c16"
                  >
                    <span
                      class="c17"
                    >
                      <span
                        class="c18"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c20"
                    >
                      <p
                        class="c8 c21"
                      >
                        Daniel Court and Amy Blumhardt
                      </p>
                      <span
                        class="c22"
                      >
                        Liberty
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Alvin Boone and James Lian, Constitution."
                aria-selected="false"
                class="c13 c14"
                role="option"
                type="button"
              >
                <span
                  class="c15"
                >
                  <span
                    class="c16"
                  >
                    <span
                      class="c17"
                    >
                      <span
                        class="c18"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c20"
                    >
                      <p
                        class="c8 c21"
                      >
                        Alvin Boone and James Lian
                      </p>
                      <span
                        class="c22"
                      >
                        Constitution
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Ashley Hildebrand-McDougall and James Garritty, Whig."
                aria-selected="false"
                class="c13 c14"
                role="option"
                type="button"
              >
                <span
                  class="c15"
                >
                  <span
                    class="c16"
                  >
                    <span
                      class="c17"
                    >
                      <span
                        class="c18"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c20"
                    >
                      <p
                        class="c8 c21"
                      >
                        Ashley Hildebrand-McDougall and James Garritty
                      </p>
                      <span
                        class="c22"
                      >
                        Whig
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Martin Patterson and Clay Lariviere, Labor."
                aria-selected="false"
                class="c13 c14"
                role="option"
                type="button"
              >
                <span
                  class="c15"
                >
                  <span
                    class="c16"
                  >
                    <span
                      class="c17"
                    >
                      <span
                        class="c18"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c20"
                    >
                      <p
                        class="c8 c21"
                      >
                        Martin Patterson and Clay Lariviere
                      </p>
                      <span
                        class="c22"
                      >
                        Labor
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
    <nav
      class="c23"
    >
      <button
        aria-label="next contest"
        class="c24"
        id="next"
        type="button"
      >
        <span
          class="c15"
        >
          <span
            class="c25"
          >
            Next
          </span>
        </span>
      </button>
      <button
        aria-label="previous contest"
        class="c24"
        id="previous"
        type="button"
      >
        <span
          class="c15"
        >
          <span
            class="c26"
          >
            Back
          </span>
        </span>
      </button>
      <button
        class="c13"
        type="button"
      >
        <span
          class="c15"
        >
          <span
            class="c27"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-display "
              data-icon="display"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64H240l-10.7 32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H346.7L336 416H512c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64zM512 64V352H64V64H512z"
                fill="currentColor"
              />
            </svg>
            <span
              class="c28"
            >
              Color & Size
            </span>
          </span>
        </span>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Renders ContestPage in Landscape orientation 1`] = `
.c31 {
  font-size: 1em;
  font-weight: 500;
  line-height: 1.2;
  margin: 0;
}

.c20 {
  font-size: 1em;
  font-weight: 400;
  line-height: 1.2;
  margin: 0;
  font-size: 0.75em;
}

.c37 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-size: 0.75em;
}

.c6 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-size: 1rem;
  margin-bottom: 0.5em;
}

.c23 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  text-align: center;
  font-size: 1rem;
  margin-bottom: 0.5em;
}

.c4 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-weight: 500;
  line-height: 1.08;
  margin-bottom: 0.3em;
  font-size: 1.5rem;
  font-weight: 600;
}

.c4:not(:first-child) {
  margin-top: 1.25em;
}

.c4 + h1,
.c4 + h2,
.c4 + h3,
.c4 + h4,
.c4 + h5,
.c4 + h6 {
  margin-top: 0 !important;
}

.c36 {
  font-size: 1em;
  line-height: 1.2;
  margin: 0;
  font-weight: 500;
  line-height: 1.08;
  margin-bottom: 0.3em;
  font-size: 0.9rem;
}

.c36:not(:first-child) {
  margin-top: 1.25em;
}

.c36 + h1,
.c36 + h2,
.c36 + h3,
.c36 + h4,
.c36 + h5,
.c36 + h6 {
  margin-top: 0 !important;
}

.c38 {
  white-space: nowrap;
}

.c3 {
  max-width: 66ch;
  line-height: 1.2;
}

.c3 p {
  font-size: 1em;
}

.c3 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c3 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c3 h3 {
  font-size: 1.17em;
}

.c3 h4 {
  font-size: 1em;
}

.c3 h5 {
  font-size: 0.9em;
}

.c3 h3,
.c3 h4,
.c3 h5,
.c3 p,
.c3 ol,
.c3 ul,
.c3 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c3 h1 + h2 {
  margin-top: -0.75em;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h1 + ol,
.c3 h2 + ol,
.c3 h1 + ul,
.c3 h2 + ul {
  margin-top: -0.75em;
}

.c3 h3 + p,
.c3 h4 + p,
.c3 h5 + p,
.c3 h3 + ol,
.c3 h4 + ol,
.c3 h5 + ol,
.c3 h3 + ul,
.c3 h4 + ul,
.c3 h5 + ul {
  margin-top: -1em;
}

.c3 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c3 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c3 dl {
  margin: 1em 0;
}

.c3 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c35 {
  max-width: 66ch;
  line-height: 1.2;
}

.c35 p {
  font-size: 1em;
}

.c35 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c35 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c35 h3 {
  font-size: 1.17em;
}

.c35 h4 {
  font-size: 1em;
}

.c35 h5 {
  font-size: 0.9em;
}

.c35 h3,
.c35 h4,
.c35 h5,
.c35 p,
.c35 ol,
.c35 ul,
.c35 hr {
  margin-top: 0;
  margin-bottom: 0;
}

.c35 h1 + h2 {
  margin-top: -0.75em;
}

.c35 h1 + p,
.c35 h2 + p,
.c35 h1 + ol,
.c35 h2 + ol,
.c35 h1 + ul,
.c35 h2 + ul {
  margin-top: -0.75em;
}

.c35 h3 + p,
.c35 h4 + p,
.c35 h5 + p,
.c35 h3 + ol,
.c35 h4 + ol,
.c35 h5 + ol,
.c35 h3 + ul,
.c35 h4 + ul,
.c35 h5 + ul {
  margin-top: 0;
}

.c35 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c35 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c35 dl {
  margin: 1em 0;
}

.c35 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c17 {
  fill: currentColor;
  height: 1em;
  width: 1em;
}

.c11 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-sizing: border-box;
  background: #d3d3d3;
  padding: 0.75em 1em;
  text-align: center;
  line-height: 1.25;
  color: #000000;
  touch-action: manipulation;
}

.c11:hover,
.c11:active {
  outline: none;
}

.c24 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-sizing: border-box;
  background: #d3d3d3;
  padding: 1em 1.75em;
  text-align: center;
  line-height: 1.25;
  color: #000000;
  font-size: 1.25em;
  touch-action: manipulation;
}

.c24:hover,
.c24:active {
  outline: none;
}

.c26 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-sizing: border-box;
  background: #d3d3d3;
  padding: 0.35em 0.5em;
  text-align: center;
  line-height: 1.25;
  color: #000000;
  touch-action: manipulation;
}

.c26:hover,
.c26:active {
  outline: none;
}

.c13 {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0.05rem solid currentColor;
  border-radius: 0.15em;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.75em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.75em;
}

.c16 > * {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c12 {
  border: 0.05rem solid currentColor;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  min-width: -webkit-min-content;
  min-width: -moz-min-content;
  min-width: min-content;
  padding: 0.5rem 0.5rem;
  text-align: left;
  width: 100%;
}

.c12:active {
  border: 0.05rem solid #47a74b;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  gap: 0.5rem;
}

.c15 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1;
}

.c19 {
  line-height: inherit;
  margin-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c34 {
  height: 100%;
  max-height: 250px;
  max-width: 250px;
  position: relative;
  width: 100%;
}

.c2 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 30px 0.5rem;
}

.c5 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: auto;
}

.c7::before,
.c7::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c7::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c7::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c9 {
  margin: 0 auto;
  width: 100%;
  padding: 0.25rem 20px 0;
}

.c10 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1.5rem 1rem 0;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: auto;
}

.c33 div:first-child {
  margin-right: 1rem;
  min-width: 5rem;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1;
  -ms-flex: 0 1;
  flex: 0 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #333333;
  color: #ffffff;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
}

.c22 p > button {
  width: 100%;
}

.c28 {
  margin: 1rem;
}

.c25 {
  white-space: nowrap;
}

.c25::after {
  display: inline-block;
  margin-left: 0.5rem;
  background: url('/images/arrow-right-open-black.svg') no-repeat;
  width: 1.375rem;
  height: 1.375rem;
  vertical-align: text-bottom;
  content: '';
}

.c27 {
  white-space: nowrap;
}

.c27::before {
  display: inline-block;
  margin-right: 0.5rem;
  background: url('/images/arrow-left-open-black.svg') no-repeat;
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
  content: '';
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 20px;
}

.c29 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c29 button {
  padding-right: 10px;
  padding-left: 10px;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  gap: 0.5rem;
  text-align: left;
}

@media print {
  .c0 {
    display: none;
  }
}

@media print {

}

@media print {

}

@media print {

}

<div>
  <div
    class="c0"
  >
    <main
      class="c1"
    >
      <div
        class="c2"
        id="contest-header"
      >
        <div
          class="c3"
          id="audiofocus"
        >
          <h1
            aria-label="District 1 President and Vice-President."
            class="c4"
          >
            <div
              class="c5"
            >
              District 1
            </div>
            President and Vice-President
          </h1>
          <p
            class="c6"
          >
            Vote for 
            1
            .
             
            <span
              class="screen-reader-only"
            >
              To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
            </span>
          </p>
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              aria-multiselectable="true"
              class="c10"
              role="listbox"
            >
              <button
                aria-label=" Joseph Barchi and Joseph Hallaren, Federalist."
                aria-selected="false"
                class="c11 c12"
                role="option"
                type="button"
              >
                <span
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    <span
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <svg
                          aria-hidden="true"
                          class="c17"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c18"
                    >
                      <p
                        class="c6 c19"
                      >
                        Joseph Barchi and Joseph Hallaren
                      </p>
                      <span
                        class="c20"
                      >
                        Federalist
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Adam Cramer and Greg Vuocolo, People's."
                aria-selected="false"
                class="c11 c12"
                role="option"
                type="button"
              >
                <span
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    <span
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <svg
                          aria-hidden="true"
                          class="c17"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c18"
                    >
                      <p
                        class="c6 c19"
                      >
                        Adam Cramer and Greg Vuocolo
                      </p>
                      <span
                        class="c20"
                      >
                        People's
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Daniel Court and Amy Blumhardt, Liberty."
                aria-selected="false"
                class="c11 c12"
                role="option"
                type="button"
              >
                <span
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    <span
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <svg
                          aria-hidden="true"
                          class="c17"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c18"
                    >
                      <p
                        class="c6 c19"
                      >
                        Daniel Court and Amy Blumhardt
                      </p>
                      <span
                        class="c20"
                      >
                        Liberty
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Alvin Boone and James Lian, Constitution."
                aria-selected="false"
                class="c11 c12"
                role="option"
                type="button"
              >
                <span
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    <span
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <svg
                          aria-hidden="true"
                          class="c17"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c18"
                    >
                      <p
                        class="c6 c19"
                      >
                        Alvin Boone and James Lian
                      </p>
                      <span
                        class="c20"
                      >
                        Constitution
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Ashley Hildebrand-McDougall and James Garritty, Whig."
                aria-selected="false"
                class="c11 c12"
                role="option"
                type="button"
              >
                <span
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    <span
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <svg
                          aria-hidden="true"
                          class="c17"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c18"
                    >
                      <p
                        class="c6 c19"
                      >
                        Ashley Hildebrand-McDougall and James Garritty
                      </p>
                      <span
                        class="c20"
                      >
                        Whig
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Martin Patterson and Clay Lariviere, Labor."
                aria-selected="false"
                class="c11 c12"
                role="option"
                type="button"
              >
                <span
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    <span
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <svg
                          aria-hidden="true"
                          class="c17"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="c18"
                    >
                      <p
                        class="c6 c19"
                      >
                        Martin Patterson and Clay Lariviere
                      </p>
                      <span
                        class="c20"
                      >
                        Labor
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
    <nav
      class="c21"
    >
      <div
        class="c22"
      >
        <div
          class="c3"
        >
          <p
            class="c23"
          >
            This is the 
            <strong>
              1st
            </strong>
             of
             
            21 contests
            .
          </p>
          <p
            class="c6"
          >
            <button
              aria-label="next contest"
              class="c24"
              id="next"
              type="button"
            >
              <span
                class="c13"
              >
                <span
                  class="c25"
                >
                  Next
                </span>
              </span>
            </button>
          </p>
          <p
            class="c6"
          >
            <button
              aria-label="previous contest"
              class="c26"
              id="previous"
              type="button"
            >
              <span
                class="c13"
              >
                <span
                  class="c27"
                >
                  Back
                </span>
              </span>
            </button>
          </p>
        </div>
      </div>
      <div
        class="c28"
      >
        <div
          class="c29"
        >
          <button
            class="c11"
            type="button"
          >
            <span
              class="c13"
            >
              <span
                class="c30"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-display "
                  data-icon="display"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64H240l-10.7 32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H346.7L336 416H512c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64zM512 64V352H64V64H512z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="c31"
                >
                  Color & Size
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          aria-hidden="true"
          class="c32"
          data-testid="election-info"
        >
          <div
            class="c33"
          >
            <div
              aria-hidden="true"
              class="c34"
            />
            <div
              class="c35"
            >
              <h5
                aria-label=" General Election."
                class="c36"
              >
                 General Election
              </h5>
              <p
                class="c6"
              >
                <span
                  class="c37"
                >
                  November 3, 2020
                  <br />
                  <span
                    class="c38"
                  >
                    Franklin County
                    ,
                  </span>
                   
                  <span
                    class="c38"
                  >
                    State of Hamilton
                  </span>
                </span>
              </p>
              <span
                class="c37"
              >
                <span
                  class="c38"
                >
                  Center Springfield
                  , 
                </span>
                <span
                  class="c38"
                >
                  ballot style 
                  12
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;
